package sample;


public enum BlockSide {
    BRICK_TOP_BOT, BRICK_LT_RT, BRICK_CORNER
}