package sample;

import javafx.scene.layout.Pane;


public class Paddle extends ImageViewGameObj{

    public Paddle(Pane root, String url)
    {
        super(root, url,145,25);

    }

}
