@startuml

title __REALGUI's Class Diagram__\n

  namespace sample {
    class sample.Ball {
    }
  }
  

  namespace sample {
    class sample.BallSkin {
    }
  }
  

  namespace sample {
    enum BlockSide {
    }
  }
  

  namespace sample {
    class sample.Brick {
    }
  }
  

  namespace sample {
    class sample.BrickSlayer {
    }
  }
  

  namespace sample {
    interface sample.Constants {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.DBConnector {
    }
  }
  

  namespace sample {
    class sample.ImageViewGameObj {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Map {
    }
  }
  

  namespace sample {
    class sample.Paddle {
    }
  }
  

  namespace sample {
    class sample.PaddleSkin {
    }
  }
  

  namespace sample {
    class sample.Player {
    }
  }
  

  namespace sample {
    class sample.Scene2Controller {
    }
  }
  

  namespace sample {
    class sample.Scene3Controller {
    }
  }
  

  namespace sample {
    class sample.Scene4Controller {
    }
  }
  

  namespace sample {
    class sample.Scene5Controller {
    }
  }
  

  namespace sample {
    class sample.Scene6Controller {
    }
  }
  

  sample.Ball -up-|> sample.ImageViewGameObj
  sample.Brick -up-|> sample.ImageViewGameObj
  sample.BrickSlayer o-- sample.Ball : ball
  sample.BrickSlayer o-- sample.Brick : brick
  sample.BrickSlayer o-- sample.ImageViewGameObj : coin
  sample.BrickSlayer o-- sample.ImageViewGameObj : completed
  sample.BrickSlayer o-- sample.ImageViewGameObj : gameOver
  sample.BrickSlayer o-- sample.ImageViewGameObj : life1
  sample.BrickSlayer o-- sample.ImageViewGameObj : life2
  sample.BrickSlayer o-- sample.ImageViewGameObj : life3
  sample.BrickSlayer o-- sample.Paddle : paddle
  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller o-- sample.DBConnector : connector
  sample.Main -up-|> javafx.application.Application
  sample.Paddle -up-|> sample.ImageViewGameObj
  sample.Scene2Controller .up.|> javafx.fxml.Initializable
  sample.Scene3Controller .up.|> javafx.fxml.Initializable
  sample.Scene5Controller .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
